# transcendent

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: bump.yml  deploy.yml  integrate.yml  release.yml
transcendent/: __main__.py  k.py  models.py
