[project]
name = "application"
version = "0.1.0"
description = ""
authors = [
    {name = "Kennete Basco",email = "97374837+kankenny@users.noreply.github.com"}
]
license = { text = "MIT License" }
requires-python = ">=3.10,<3.13"

dependencies = []

[project.scripts]
application = "application:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''

[tool.commitizen]
version = "0.1.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "application/__version__.py"
]
